--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "vorpal-rc",
-  "version": "0.0.1",
   "description": ".rc file support for Vorpal.js",
   "main": "./dist/rc.js",
   "scripts": {
     "build": "babel src -d dist",
     "example": "babel-node examples/shell.js",
     "test": "mocha -w --compilers js:babel-register test/test.js",
-    "test:single": "mocha --compilers js:babel-register test/test.js"
+    "test:single": "mocha --compilers js:babel-register test/test.js",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "commit": "git-cz"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/subk/vorpal-rc.git"
+    "url": "https://github.com/subk/vorpal-rc.git"
   },
   "keywords": [
     "vorpal",
@@ -27,10 +28,16 @@
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
+    "commitizen": "^2.7.6",
+    "cz-conventional-changelog": "^1.1.5",
     "mocha": "^2.4.5",
+    "semantic-release": "^4.3.5",
     "vorpal": "^1.10.10"
   },
   "dependencies": {
     "trim": "0.0.1"
+  },
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog"
   }
 }
