--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 before_script:
   - npm prune
 script:
-  - npm test:single
+  - npm run test:single
   - npm run build
 after_success:
   - npm run semantic-release
