--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "prebuild": "rm -rf dist",
     "build": "babel src -d dist",
     "example": "babel-node examples/shell.js",
+    "check-coverage": "istanbul check-coverage --statements 100 --functions 100 --lines 100",
+    "report-coverage": "cat ./coverage/lcov.info | codecov",
     "test": "mocha -w --compilers js:babel-register test/test.js",
-    "test:single": "mocha --compilers js:babel-register test/test.js",
+    "test:single": "istanbul cover _mocha -- -R spec --report lcovonly --compilers js:babel-register test/test.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "commit": "git-cz"
   },
@@ -29,10 +31,13 @@
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
+    "codecov.io": "^0.1.6",
     "commitizen": "^2.7.6",
     "cz-conventional-changelog": "^1.1.5",
+    "istanbul": "^1.0.0-alpha.2",
     "mocha": "^2.4.5",
     "semantic-release": "^4.3.5",
+    "test-console": "^1.0.0",
     "vorpal": "^1.10.10"
   },
   "dependencies": {
@@ -41,6 +46,9 @@
   "config": {
     "commitizen": {
       "path": "node_modules/cz-conventional-changelog"
+    },
+    "ghooks": {
+      "pre-commit": "npm run test:single && npm run check-coverage"
     }
   }
 }
